# MusicPlayer

./: CMakeLists.txt  Doxyfile  Readme.md  readme.txt
.github/workflows/: cicd.yml
docs/html/: _audio_output_interface_8h.html  _audio_output_interface_8h_source.html  _console_view_8cpp.html  _console_view_8h.html  _console_view_8h_source.html  _file_manager_interface_8h.html  _file_manager_interface_8h_source.html  _headphone_output_8cpp.html  _headphone_output_8h.html  _headphone_output_8h_source.html  _mp3_file_manager_8cpp.html  _mp3_file_manager_8h.html  _mp3_file_manager_8h_source.html  _mp4_file_manager_8cpp.html  _mp4_file_manager_8h.html  _mp4_file_manager_8h_source.html  _music_player_controller_8cpp.html  _music_player_controller_8h.html  _music_player_controller_8h_source.html  _speaker_output_8cpp.html  _speaker_output_8h.html  _speaker_output_8h_source.html  annotated.html  class_audio_output_interface-members.html  class_audio_output_interface.html  class_console_view-members.html  class_console_view.html  class_file_manager_interface-members.html  class_file_manager_interface.html  class_headphone_output-members.html  class_headphone_output.html  class_mp3_file_manager-members.html  class_mp3_file_manager.html  class_mp4_file_manager-members.html  class_mp4_file_manager.html  class_music_player_controller-members.html  class_music_player_controller.html  class_speaker_output-members.html  class_speaker_output.html  classes.html  (+11 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_6.js  pages_0.js  pages_1.js  searchdata.js
docs/latex/: _audio_output_interface_8h.tex  _audio_output_interface_8h_source.tex  _console_view_8cpp.tex  _console_view_8h.tex  _console_view_8h_source.tex  _file_manager_interface_8h.tex  _file_manager_interface_8h_source.tex  _headphone_output_8cpp.tex  _headphone_output_8h.tex  _headphone_output_8h_source.tex  _mp3_file_manager_8cpp.tex  _mp3_file_manager_8h.tex  _mp3_file_manager_8h_source.tex  _mp4_file_manager_8cpp.tex  _mp4_file_manager_8h.tex  _mp4_file_manager_8h_source.tex  _music_player_controller_8cpp.tex  _music_player_controller_8h.tex  _music_player_controller_8h_source.tex  _speaker_output_8cpp.tex  _speaker_output_8h.tex  _speaker_output_8h_source.tex  annotated.tex  class_audio_output_interface.eps  class_audio_output_interface.tex  class_console_view.tex  class_file_manager_interface.eps  class_file_manager_interface.tex  class_headphone_output.eps  class_headphone_output.tex  class_mp3_file_manager.eps  class_mp3_file_manager.tex  class_mp4_file_manager.eps  class_mp4_file_manager.tex  class_music_player_controller.tex  class_speaker_output.eps  class_speaker_output.tex  files.tex  hierarchy.tex  index.tex  (+2 more)
reports/: coverage.AudioOutputInterface.h.05d1ea8e81ca4b15ea49fb5758e98978.html  coverage.ConsoleView.cpp.05120ecb8f001654368146fc4f66a567.html  coverage.FileManagerInterface.h.859aa82ea92c20c98ad73c22f1fa7479.html  coverage.HeadphoneOutput.cpp.386a0b4ee04911c63db590b8d74b1881.html  coverage.HeadphoneOutput.h.0487789367e6b86d3170dd939903f129.html  coverage.Mp3FileManager.cpp.5ef31a7e0eeb0e86cd81576d4c330991.html  coverage.Mp3FileManager.h.e8c6c6c3fa5b11b4680f3b4d79f2b1e1.html  coverage.Mp4FileManager.cpp.16a1bddc2fd54a991dcc8e2d2b0ecd14.html  coverage.Mp4FileManager.h.36fefd178868e5476dcca4b93bb5bcae.html  coverage.MusicPlayerController.cpp.0cf1d176bd67ee845dee9b3e25959c3d.html  coverage.MusicPlayerController.h.3c978be473fb1cff6084fe3ed6f9be5b.html  coverage.SpeakerOutput.cpp.9e432807da3934610e933ce3e2349293.html  coverage.SpeakerOutput.h.9aaa0ec8b0efafefb2899dccda7e9b2b.html  coverage.functions.html  coverage.html  coverage.main.cpp.7ec3c68a81efff79b6ca22ac1f1eabba.html
src/: AudioOutputProxy.h  FileManagerProxy.h  MusicPlayer.cpp  MusicPlayer.h  main.cpp
src/controller/: MusicPlayerController.cpp  MusicPlayerController.h
src/model/: AudioOutputInterface.h  FileManagerInterface.h  HeadphoneOutput.cpp  HeadphoneOutput.h  Mp3FileManager.cpp  Mp3FileManager.h  Mp4FileManager.cpp  Mp4FileManager.h  SpeakerOutput.cpp  SpeakerOutput.h
src/view/: ConsoleView.cpp  ConsoleView.h
tests/: MusicPlayerTest.cpp
tests/controller/: MusicPlayerControllerTest.cpp
tests/model/: AudioOutputProxy.h  FileManagerProxy.h  HeadphoneOutputTest.cpp  Mp3FileManagerTest.cpp  Mp4FileManagerTest.cpp  SpeakerOutputTest.cpp
tests/view/: ConsoleViewTest.cpp
